--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- <link rel="shortcut icon" href="favicon.ico"> To add-->
         <link rel="stylesheet" href="css/index.css">
-        <script src="index.js" type="text/javascript"></script>
+        <script src="index.js" type="text/javascript" defer></script>
     </head>
     <body>
         <header>
