--- a/index.html
+++ b/index.html
@@ -5,13 +5,54 @@
         <title>eldanee</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- <link rel="shortcut icon" href="favicon.ico"> To add-->
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="index.css">
         <script src="index.js" type="text/javascript" defer></script>
     </head>
     <body>
         <header>
-            <canvas id="header-canvas" height="3000px"> <!-- oversized initial height so we don't get ugly pop-in -->
+            <canvas id="main-canvas" class="main-canvas" height="3000px"> <!-- oversized initial height so we don't get ugly pop-in -->
             </canvas>
+            <nav>
+                <ul>
+                    <li><h1><a href="">Ciao, I'm Daniele!</a></h1></li>
+                    <li><p><a id="about-link" href="#about">About Me</a></p></li>
+                    <li><p><a id="projects-link" href="#projects">Projects</a></p></li>
+                    <li><p><a id="stuff-link" href="#stuff">Other Stuff</a></p></li>
+                    <li><p><a id="resume-link" href="#resume">Resumé</a></p></li>
+                </ul>
+            </nav>
         </header>
+            <canvas id="shadow-div" class="shadow-div"></canvas>
+            <section>
+                <h2 id="about">About Me</h2>
+                <p>Hi, I'm Daniele Alessi. <br> I'm an Italian student, currently completing my master degree in <b>Computer Science & Engineering</b> at Politecnico di Milano.</p>
+                <p>I'm studying <b>computer graphics</b>, <b>GPU programming</b> and <b>parallel computing</b>, with a particular focus on <b>Vulkan</b> as both graphics API and GPGPU tool.<br>I'm also learning <b>WebGPU</b>, and I'm proficient in <b>GLSL</b>.</p>
+                <p>This website is my personal portfolio, but you can find more details about me in my <a href="#resume">resumé</a> and on my <a href="https://github.com/ElDanee">GitHub page</a>.</p>
+            </section>
+
+            <section>
+                <h2 id="projects">Projects</h2>
+                <ul>
+                    <li class="project" >
+                        <a href="projects/particleRenderer/particles.html"><img src="projects/particleRenderer/TextureBall.png" alt="particles thumbnail"></a>
+                        <a href="projects/particleRenderer/particles.html"><h3>GPU Particles Renderer</h3></a>
+                        <p>Description goes here.</p>
+                    </li>
+                    <li class="project" >
+                        <a href="projects/particlesFX/particlesFX.html"><img src="projects/particleRenderer/TextureBall.png" alt="particles thumbnail"></a>
+                        <a href="projects/particlesFX/particlesFX.html"><h3>Particles FX</h3></a>
+                        <p>Description goes here.</p>
+                    </li>
+                </ul>
+                <p>&nbsp;</p>
+            </section>
+
+            <section>
+                <h2 id="stuff">Stuff</h2>
+            </section>
+
+            <section>
+                <h2 id="resume">Resumé</h2>
+            </section>
     </body>
 </html>
