--- a/index.html
+++ b/index.html
@@ -34,13 +34,23 @@
                 <h2 id="projects">Projects</h2>
                 <ul>
                     <li class="project" >
-                        <a href="projects/particleRenderer/particles.html"><img src="projects/particleRenderer/TextureBall.png" alt="particles thumbnail"></a>
+                        <a href="projects/particleRenderer/particles.html"><img src="projects/particleRenderer/Particles.gif" alt="particles thumbnail"></a>
                         <a href="projects/particleRenderer/particles.html"><h3>GPU Particles Renderer</h3></a>
                         <p>Description goes here.</p>
                     </li>
                     <li class="project" >
-                        <a href="projects/particlesFX/particlesFX.html"><img src="projects/particleRenderer/TextureBall.png" alt="particles thumbnail"></a>
+                        <a href="projects/particlesFX/particlesFX.html"><img src="projects/particlesFX/Fireworks.gif" alt="particles thumbnail"></a>
                         <a href="projects/particlesFX/particlesFX.html"><h3>Particles FX</h3></a>
+                        <p>Description goes here.</p>
+                    </li>
+                    <li class="project" >
+                        <a href="projects/RayTracer/rayTracer.html"><img src="projects/RayTracer/RayTracer.png" alt="ray tracer thumbnail"></a>
+                        <a href="projects/particleRenderer/particles.html"><h3>GPU Ray Tracer</h3></a>
+                        <p>Description goes here.</p>
+                    </li>
+                    <li class="project" >
+                        <a href="projects/VkRenderer/renderer.html"><img src="projects/VkRenderer/Renderer.png" alt="renderer thumbnail"></a>
+                        <a href="projects/particlesFX/particlesFX.html"><h3>Vulkan Renderer</h3></a>
                         <p>Description goes here.</p>
                     </li>
                 </ul>
@@ -48,7 +58,15 @@
             </section>
 
             <section>
-                <h2 id="stuff">Stuff</h2>
+                <h2 id="stuff">Other Stuff</h2>
+                <ul>
+                    <li class="project" >
+                        <a href="https://polimi-game-collective.itch.io/diagonaliz"><img src="stuff/Diagonaliz/Diagonaliz.png" alt="diagoaliz thumbnail"></a>
+                        <a href="https://polimi-game-collective.itch.io/diagonaliz"><h3>Diagonaliz</h3></a>
+                        <p>Description goes here.</p>
+                    </li>
+                </ul>
+                <p>&nbsp;</p>
             </section>
 
             <section>
