Add project: water simulation

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 <h2 id="projects">Projects</h2>
                 <ul>
                     <li class="project" >
+                        <a href="projects/WaterSimulation/waterSimulation.html"><img src="projects/particleRenderer/Particles.gif" alt="particles thumbnail"></a>
+                        <a href="projects/WaterSimulation/waterSimulation.html"><h3>Water Simulation</h3></a>
+                        <p>Description goes here.</p>
+                    </li>
+                    <li class="project" >
                         <a href="projects/particleRenderer/particles.html"><img src="projects/particleRenderer/Particles.gif" alt="particles thumbnail"></a>
                         <a href="projects/particleRenderer/particles.html"><h3>GPU Particles Renderer</h3></a>
                         <p>Description goes here.</p>
