--- a/projects/particlesFX/particlesFX.html
+++ b/projects/particlesFX/particlesFX.html
@@ -15,15 +15,12 @@
             <nav>
                 <ul>
                     <li><h1><a href="">Fireworks</a></h1></li>
-                    <li><p><a id="about-link" href="#about">About This Project</a></p></li>
                     <li><p><a id="projects-link" href="../../index.html">Back To Homepage</a></p></li>
+                    <li><p><a id="about-link" href="https://github.com/ElDanee/eldanee.github.io/tree/main/projects/particlesFX">Github</a></p></li>
+                    <li><p>(Left click to shoot!)</p></li>
                 </ul>
             </nav>
         </header>
-            <section>
-                <h2 id="about">About</h2>
-                <p></p>
-            </section>
     </body>
 </html>
 
