--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><h1><a href="">Ciao, I'm Daniele!</a></h1></li>
                     <li><p><a id="about-link" href="#about">About Me</a></p></li>
-                    <li><p><a id="projects-link" href="#projects">Projects</a></p></li>
+                    <li><p><a id="projects-link" href="#projects">Projects & Demos</a></p></li>
                     <li><p><a id="stuff-link" href="#stuff">Other Stuff</a></p></li>
                     <li><p><a id="resume-link" href="#resume">Resumé</a></p></li>
                 </ul>
@@ -26,16 +26,20 @@
             <section>
                 <h2 id="about">About Me</h2>
                 <p>Hi, I'm Daniele Alessi. <br> I'm an Italian student, currently completing my master degree in <b>Computer Science & Engineering</b> at Politecnico di Milano.</p>
-                <p>I'm studying <b>computer graphics</b>, <b>GPU programming</b> and <b>parallel computing</b>, with a particular focus on <b>Vulkan</b> as both graphics API and GPGPU tool.<br>I'm also learning <b>WebGPU</b>, and I'm proficient in <b>GLSL</b>.</p>
-                <p>This website is my personal portfolio, but you can find more details about me in my <a href="#resume">resumé</a> and on my <a href="https://github.com/ElDanee">GitHub page</a>.</p>
+                <p>I'm studying <b>computer graphics</b>, <b>GPU programming</b> and <b>parallel computing</b>, with a particular focus on <b>Vulkan</b> both as graphics API and GPGPU platform.<br>I'm also learning <b>WebGPU</b>, and I'm proficient in <b>GLSL</b>.</p>
+                <p>This website is my personal portfolio, but you can find more about me in my <a id="resume-link2" href="#resume">resumé</a> and on my <a href="https://github.com/ElDanee">GitHub page</a>.</p>
             </section>
 
             <section>
-                <h2 id="projects">Projects</h2>
+                <h2 id="projects">Projects & Demos</h2>
                 <ul>
                     <li class="project" >
-                        <a href="projects/WaterSimulation/waterSimulation.html"><img src="projects/particleRenderer/Particles.gif" alt="particles thumbnail"></a>
+                        <a href="projects/WaterSimulation/waterSimulation.html"><img src="projects/WaterSimulation/WaterSimulation.gif" alt="particles thumbnail"></a>
                         <a href="projects/WaterSimulation/waterSimulation.html"><h3>Water Simulation</h3></a>
+                    </li>
+                    <li class="project" >
+                        <a href="projects/particlesFX/particlesFX.html"><img src="projects/particlesFX/Fireworks.gif" alt="particles thumbnail"></a>
+                        <a href="projects/particlesFX/particlesFX.html"><h3>Fireworks Particle System</h3></a>
                         <p>Description goes here.</p>
                     </li>
                     <li class="project" >
@@ -44,18 +48,13 @@
                         <p>Description goes here.</p>
                     </li>
                     <li class="project" >
-                        <a href="projects/particlesFX/particlesFX.html"><img src="projects/particlesFX/Fireworks.gif" alt="particles thumbnail"></a>
-                        <a href="projects/particlesFX/particlesFX.html"><h3>Particles FX</h3></a>
-                        <p>Description goes here.</p>
-                    </li>
-                    <li class="project" >
                         <a href="projects/RayTracer/rayTracer.html"><img src="projects/RayTracer/RayTracer.png" alt="ray tracer thumbnail"></a>
-                        <a href="projects/particleRenderer/particles.html"><h3>GPU Ray Tracer</h3></a>
+                        <a href="projects/RayTracer/rayTracer.html"><h3>GPU Ray Tracer</h3></a>
                         <p>Description goes here.</p>
                     </li>
                     <li class="project" >
                         <a href="projects/VkRenderer/renderer.html"><img src="projects/VkRenderer/Renderer.png" alt="renderer thumbnail"></a>
-                        <a href="projects/particlesFX/particlesFX.html"><h3>Vulkan Renderer</h3></a>
+                        <a href="projects/VkRenderer/renderer.html"><h3>Vulkan Renderer</h3></a>
                         <p>Description goes here.</p>
                     </li>
                 </ul>
@@ -66,9 +65,10 @@
                 <h2 id="stuff">Other Stuff</h2>
                 <ul>
                     <li class="project" >
-                        <a href="https://polimi-game-collective.itch.io/diagonaliz"><img src="stuff/Diagonaliz/Diagonaliz.png" alt="diagoaliz thumbnail"></a>
+                        <a href="https://polimi-game-collective.itch.io/diagonaliz"><img src="Stuff/Diagonaliz/Diagonaliz.png" alt="diagoaliz thumbnail"></a>
                         <a href="https://polimi-game-collective.itch.io/diagonaliz"><h3>Diagonaliz</h3></a>
-                        <p>Description goes here.</p>
+                        <p>A simple platformer game developed for the Video Game Design and Programming course.</br>
+                        The beta version is available <a href="https://polimi-game-collective.itch.io/diagonaliz">here</a>.</p>
                     </li>
                 </ul>
                 <p>&nbsp;</p>
@@ -76,6 +76,10 @@
 
             <section>
                 <h2 id="resume">Resumé</h2>
+                <p><a href="Files/resume-DA.pdf">Here</a> you can find my (usually) updated resumè, with experiences, education details and my skills.</p>
             </section>
+            
+            </br>
+            </br>
     </body>
 </html>
