--- a/projects/WaterSimulation/waterSimulation.html
+++ b/projects/WaterSimulation/waterSimulation.html
@@ -25,7 +25,7 @@
             .cursor-active {
                 opacity: 0.3; /* Show only on canvas */
             }
-            </style>
+        </style>
         
     </head>
     <body>
@@ -34,7 +34,6 @@
             </canvas>
             <div class="custom-cursor"></div>
             <script>
-                
                 const canvas = document.getElementById("main-canvas");
                 const cursor = document.querySelector(".custom-cursor");
                 document.addEventListener("mousemove", (event) => {
@@ -55,14 +54,10 @@
             <nav>
                 <ul>
                     <li><h1><a href="">Water Simulation</a></h1></li>
-                    <li><p><a id="about-link" href="#about">About This Project</a></p></li>
                     <li><p><a id="projects-link" href="../../index.html">Back To Homepage</a></p></li>
+                    <li><p><a id="projects-link" href="https://github.com/ElDanee/eldanee.github.io/tree/main/projects/WaterSimulation">Github</a></p></li>
                 </ul>
             </nav>
         </header>
-            <section>
-                <h2 id="about">About</h2>
-                <p></p>
-            </section>
     </body>
 </html>
