Add: PBD project, Fix: thumbnails size

--- a/index.html
+++ b/index.html
@@ -34,28 +34,31 @@
                 <h2 id="projects">Projects & Demos</h2>
                 <ul>
                     <li class="project" >
+                        <a href="https://github.com/ElDanee/PBDMeshRenderer"><img src="Stuff/XPBD_Simulation/XPBD.gif" alt="diagoaliz thumbnail"></a>
+                        <a href="https://github.com/ElDanee/PBDMeshRenderer"><h3>XPBD Simulation</h3></a>
+                        <p>Real Time simulation of deformable 2D and 3D soft bodies using Extended Position Based Dynamics, parallelized and rendered using Vulkan API.</p>
+                    </li>
+                    <li class="project" >
                         <a href="projects/WaterSimulation/waterSimulation.html"><img src="projects/WaterSimulation/WaterSimulation.gif" alt="particles thumbnail"></a>
                         <a href="projects/WaterSimulation/waterSimulation.html"><h3>Water Simulation</h3></a>
                     </li>
                     <li class="project" >
                         <a href="projects/particlesFX/particlesFX.html"><img src="projects/particlesFX/Fireworks.gif" alt="particles thumbnail"></a>
                         <a href="projects/particlesFX/particlesFX.html"><h3>Fireworks Particle System</h3></a>
-                        <p>Description goes here.</p>
                     </li>
                     <li class="project" >
-                        <a href="projects/particleRenderer/particles.html"><img src="projects/particleRenderer/Particles.gif" alt="particles thumbnail"></a>
-                        <a href="projects/particleRenderer/particles.html"><h3>GPU Particles Renderer</h3></a>
-                        <p>Description goes here.</p>
+                        <a href="projects/particleRenderer/particles.html"><img src="projects/particleRenderer/Particles.gif" alt="particles thumbnail"><!--</a>-->
+                            <a href="projects/particleRenderer/particles.html"><h3>GPU Particles Renderer</h3></a>
                     </li>
                     <li class="project" >
-                        <a href="projects/RayTracer/rayTracer.html"><img src="projects/RayTracer/RayTracer.png" alt="ray tracer thumbnail"></a>
-                        <a href="projects/RayTracer/rayTracer.html"><h3>GPU Ray Tracer</h3></a>
-                        <p>Description goes here.</p>
+                        <!--<a href="projects/VkRenderer/renderer.html">--><img src="projects/VkRenderer/Renderer.png" alt="renderer thumbnail"><!--</a>-->
+                        <!--<a href="projects/VkRenderer/renderer.html">--><h3>Vulkan Renderer</h3><!--</a>-->
+                        <p>Vulkan renderer, featuring indirect draws, instancing, frustum culling, particle systems and post processing effects. </br> (Github repo isn't public, yet)</p>
                     </li>
                     <li class="project" >
-                        <a href="projects/VkRenderer/renderer.html"><img src="projects/VkRenderer/Renderer.png" alt="renderer thumbnail"></a>
-                        <a href="projects/VkRenderer/renderer.html"><h3>Vulkan Renderer</h3></a>
-                        <p>Description goes here.</p>
+                        <!--<a href="projects/RayTracer/rayTracer.html">--><img src="projects/RayTracer/RayTracer.png" alt="ray tracer thumbnail"><!--</a>-->
+                            <!--<a href="projects/RayTracer/rayTracer.html">--><h3>GPU Ray Tracer</h3><!--</a>-->
+                        <p>Simple GPU ray tracer, built using Vulkan compute shaders.</br> (Github repo isn't public, yet)</p>
                     </li>
                 </ul>
                 <p>&nbsp;</p>
