Add: PTracer thumbnail

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <section>
                 <h2 id="about">About Me</h2>
                 <p>Hi, I'm Daniele Alessi. <br> I'm an Italian student, currently completing my master degree in <b>Computer Science & Engineering</b> at Politecnico di Milano.</p>
-                <p>I'm studying <b>computer graphics</b>, <b>GPU programming</b> and <b>parallel computing</b>, with a particular focus on <b>Vulkan</b> both as graphics API and GPGPU platform.<br>I'm also learning <b>WebGPU</b>, and I'm proficient in <b>GLSL</b>.</p>
+                <p>I'm studying <b>computer graphics</b>, <b>GPU programming</b> and <b>parallel computing</b>, focusing on <b>Vulkan</b> both as graphics API and GPGPU platform.<br>I'm also learning <b>WebGPU</b>, and I'm proficient in <b>GLSL</b>.</p>
                 <p>This website is my personal portfolio, but you can find more about me in my <a id="resume-link2" href="#resume">resumé</a> and on my <a href="https://github.com/ElDanee">GitHub page</a>.</p>
             </section>
 
@@ -40,15 +40,15 @@
                     </li>
                     <li class="project" >
                         <a href="projects/WaterSimulation/waterSimulation.html"><img src="projects/WaterSimulation/WaterSimulation.gif" alt="particles thumbnail"></a>
-                        <a href="projects/WaterSimulation/waterSimulation.html"><h3>Water Simulation</h3></a>
+                        <a href="projects/WaterSimulation/waterSimulation.html"><h3>Water Simulation Demo</h3></a>
                     </li>
                     <li class="project" >
                         <a href="projects/particlesFX/particlesFX.html"><img src="projects/particlesFX/Fireworks.gif" alt="particles thumbnail"></a>
-                        <a href="projects/particlesFX/particlesFX.html"><h3>Fireworks Particle System</h3></a>
+                        <a href="projects/particlesFX/particlesFX.html"><h3>Fireworks Particle System Demo</h3></a>
                     </li>
                     <li class="project" >
                         <a href="projects/particleRenderer/particles.html"><img src="projects/particleRenderer/Particles.gif" alt="particles thumbnail"><!--</a>-->
-                            <a href="projects/particleRenderer/particles.html"><h3>GPU Particles Renderer</h3></a>
+                            <a href="projects/particleRenderer/particles.html"><h3>GPU Particles Renderer Demo</h3></a>
                     </li>
                     <li class="project" >
                         <!--<a href="projects/VkRenderer/renderer.html">--><img src="projects/VkRenderer/Renderer.png" alt="renderer thumbnail"><!--</a>-->
@@ -56,9 +56,9 @@
                         <p>Vulkan renderer, featuring indirect draws, instancing, frustum culling, particle systems and post processing effects. </br> (Github repo isn't public, yet)</p>
                     </li>
                     <li class="project" >
-                        <!--<a href="projects/RayTracer/rayTracer.html">--><img src="projects/RayTracer/RayTracer.png" alt="ray tracer thumbnail"><!--</a>-->
-                            <!--<a href="projects/RayTracer/rayTracer.html">--><h3>GPU Ray Tracer</h3><!--</a>-->
-                        <p>Simple GPU ray tracer, built using Vulkan compute shaders.</br> (Github repo isn't public, yet)</p>
+                        <!--<a href="projects/RayTracer/rayTracer.html">--><img src="projects/RayTracer/PathTracer.png" alt="ray tracer thumbnail"><!--</a>-->
+                            <!--<a href="projects/RayTracer/rayTracer.html">--><h3>GPU Vulkan Ray Tracing</h3><!--</a>-->
+                        <p>Simple GPU ray tracer and path tracer, built using Vulkan compute shaders.</br> (Github repo isn't public, yet)</p>
                     </li>
                 </ul>
                 <p>&nbsp;</p>
@@ -79,7 +79,7 @@
 
             <section>
                 <h2 id="resume">Resumé</h2>
-                <p><a href="Files/resume-DA.pdf">Here</a> you can find my (usually) updated resumè, with experiences, education details and my skills.</p>
+                <p><a href="Files/resume-DA.pdf">Here</a> you can find my resumè, with experiences, education details and my skills.</p>
             </section>
             
             </br>
