Update bio (graduated :))))

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <canvas id="shadow-div" class="shadow-div"></canvas>
             <section>
                 <h2 id="about">About Me</h2>
-                <p>Hi, I'm Daniele Alessi. <br> I'm an Italian student, currently completing my master degree in <b>Computer Science & Engineering</b> at Politecnico di Milano.</p>
+                <p>Hi, I'm Daniele Alessi! <br> I'm an Italian student, and I recently completed my MSc in <b>Computer Science & Engineering</b> at Politecnico di Milano.</p>
                 <p>I'm studying <b>computer graphics</b>, <b>GPU programming</b> and <b>parallel computing</b>, focusing on <b>Vulkan</b> both as graphics API and GPGPU platform.<br>I'm also learning <b>WebGPU</b>, and I'm proficient in <b>GLSL</b>.</p>
                 <p>This website is my personal portfolio, but you can find more about me in my <a id="resume-link2" href="#resume">resumé</a> and on my <a href="https://github.com/ElDanee">GitHub page</a>.</p>
             </section>
